--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2021"
 image = "0.24.2"
 #libadwaita = "0.1.1"
 nalgebra = { version = "0.31.0", features = ["serde-serialize", "rand"] }
+nu-json = "0.63.0"
 rayon = "1.5.3"
 serde = { version = "1.0.137", features = ["derive"] }
